--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/node": "20.8.10",
     "eslint": "8.52.0",
+    "prisma": "5.5.2",
     "tsx": "3.14.0",
     "typescript": "5.2.2",
     "vitest": "0.34.6"
   },
   "dependencies": {
+    "@prisma/client": "5.5.2",
     "dotenv": "16.3.1",
     "fastify": "4.24.3",
     "zod": "3.22.4"
