--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@prisma/client": "5.5.2",
+    "@types/bcryptjs": "2.4.5",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.3.1",
     "fastify": "4.24.3",
     "zod": "3.22.4"
