--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "prisma": "5.5.2",
     "tsx": "3.14.0",
     "typescript": "5.2.2",
+    "vite-tsconfig-paths": "4.2.1",
     "vitest": "0.34.6"
   },
   "dependencies": {
