--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.1.0",
     "@types/node": "20.8.10",
+    "@vitest/coverage-v8": "0.34.6",
     "eslint": "8.52.0",
     "prisma": "5.5.2",
     "tsx": "3.14.0",
