--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:watch": "vitest --dir src/use-cases",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -21,11 +22,13 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.1.0",
     "@types/node": "20.8.10",
+    "@types/supertest": "2.0.16",
     "@vitest/coverage-v8": "0.34.6",
     "@vitest/ui": "0.34.6",
     "eslint": "8.52.0",
     "npm-run-all": "4.1.5",
     "prisma": "5.5.2",
+    "supertest": "6.3.3",
     "tsx": "3.14.0",
     "typescript": "5.2.2",
     "vite-tsconfig-paths": "4.2.1",
